--- a/app/globals.css
+++ b/app/globals.css
@@ -53,11 +53,15 @@
   :root {
     --tertiary: 214.3 31.8% 91.4%;
     --tertiary-foreground: 240 5.9% 10%;
+    --chat: 214.3 31.8% 91.4%;
+    --chat-foreground: 240 5.9% 10%;
   }
 
   .dark {
     --tertiary: 0 1% 11%;
     --tertiary-foreground: 0 0% 98%;
+    --chat: 240 3.7% 15.9%;
+    --chat-foreground: 0 0% 98%;
   }
 
   * {
