--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
+    --accent: 214.3 31.8% 91.4%;
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -51,10 +51,12 @@
 
 @layer base {
   :root {
-    --tertiary: 214.3 31.8% 91.4%;
+    --tertiary: 212.7 26.8% 83.9;
     --tertiary-foreground: 240 5.9% 10%;
     --chat: 210 40% 96.1%;
     --chat-foreground: 240 5.9% 10%;
+    --chatsecondary: 214.3 31.8% 91.4%;
+    --chatsecondary-foreground: 240 5.9% 10%;
   }
 
   .dark {
@@ -62,6 +64,8 @@
     --tertiary-foreground: 0 0% 98%;
     --chat: 240 3.7% 15.9%;
     --chat-foreground: 240 5.9% 90%;
+    --chatsecondary: 240 5.3% 26.1%;
+    --chatsecondary-foreground: 240 5.9% 90%;
   }
 
   * {
